--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,40 +27,21 @@ jobs:
           EC2_USER: ${{ secrets.EC2_USER }}
           APP_DIR: ${{ secrets.APP_DIR }}
         run: |
-          ssh -o StrictHostKeyChecking=no $EC2_USER@$EC2_HOST << 'EOF'
-            echo "Deploying FastAPI app..."
-
-            # Create app directory if it doesn't exist
-            mkdir -p $APP_DIR
-            cd $APP_DIR
-
-            # Clone repo if not present, otherwise pull latest changes
-            if [ -d ".git" ]; then
-              git reset --hard
-              git pull
-            else
-              git clone https://github.com/RusosVascosYValencianos/AplicacionWeb.git .
-            fi
-
-            # Install Python3 and pip if not installed
-            sudo apt update
-            sudo apt install -y python3 python3-venv python3-pip
-
-            # Create virtual environment
-            python3 -m venv venv
-            source venv/bin/activate
-
-            # Install dependencies
-            if [ -f "requirements.txt" ]; then
-              pip install --upgrade pip
-              pip install -r requirements.txt
-            fi
-
-            # Kill previous Uvicorn process if running
-            pkill -f "uvicorn backend.app.main:app" || true
-
-            # Start FastAPI app with Uvicorn in background
-            nohup venv/bin/uvicorn backend.app.main:app --host 0.0.0.0 --port 8000 > app.log 2>&1 &
-
-            echo "Deployment finished!"
+          ssh -o StrictHostKeyChecking=no $EC2_USER@$EC2_HOST << EOF
+          APP_DIR=${{ secrets.APP_DIR }}
+          echo "Deploying FastAPI app..."
+          mkdir -p \$APP_DIR
+          cd \$APP_DIR
+          if [ ! -d ".git" ]; then
+            git clone https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} .
+          else
+            git pull
+          fi
+          sudo apt-get update -y
+          sudo apt-get install -y python3 python3-venv python3-pip
+          python3 -m venv venv
+          source venv/bin/activate
+          pip install -r backend/requirements.txt
+          pkill -f "uvicorn" || true
+          nohup venv/bin/uvicorn backend.app.main:app --host 0.0.0.0 --port 8000 > app.log 2>&1 &
           EOF
