--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,14 +29,14 @@ jobs:
         run: |
           ssh -o StrictHostKeyChecking=no $EC2_USER@$EC2_HOST << EOF
           APP_DIR=${{ secrets.APP_DIR }}
-          
+
           echo "Deploying FastAPI app..."
           
           mkdir -p \$APP_DIR
           cd \$APP_DIR
           
           if [ ! -d ".git" ]; then
-            git clone https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} .
+            git clone git@github.com:${{ github.repository }} .
           else
             git fetch origin master
             git reset --hard origin/master
