--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,28 +10,33 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Checkout repository (needed for GitHub token URL)
+      # 1️⃣ Checkout repository (needed for GitHub Actions info)
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # 2️⃣ Deploy to EC2
+      # 2️⃣ Setup SSH agent
+      - name: Setup SSH
+        uses: webfactory/ssh-agent@v0.9.0
+        with:
+          ssh-private-key: ${{ secrets.EC2_DEPLOY_KEY }}
+
+      # 3️⃣ Deploy to EC2
       - name: Deploy to EC2
         env:
           EC2_HOST: ${{ secrets.EC2_HOST }}
           EC2_USER: ${{ secrets.EC2_USER }}
           APP_DIR: ${{ secrets.APP_DIR }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # GitHub Actions token
         run: |
           ssh -o StrictHostKeyChecking=no $EC2_USER@$EC2_HOST << EOF
           APP_DIR=${{ secrets.APP_DIR }}
           echo "Deploying FastAPI app..."
-          
+
           mkdir -p \$APP_DIR
           cd \$APP_DIR
-          
+
           # Clone repo if not present, otherwise force pull latest
           if [ ! -d ".git" ]; then
-            git clone https://x-access-token:\$GITHUB_TOKEN@github.com/${{ github.repository }} .
+            git clone git@github.com:${{ github.repository }} .
           else
             git fetch origin master
             git reset --hard origin/master
