--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,12 +36,11 @@ jobs:
           mkdir -p "$APP_DIR"
           cd "$APP_DIR"
 
-          # Clone repo if not present, otherwise update
           if [ ! -d ".git" ]; then
-              git clone git@github.com:ORG/REPO.git .
+            git clone git@github.com:RusosVascosYValencianos/AplicacionWeb.git .
           else
-              git fetch origin master
-              git reset --hard origin/master
+            git fetch origin master
+            git reset --hard origin/master
           fi
 
           # Setup Python environment
