--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,14 +23,14 @@ jobs:
           EC2_HOST: ${{ secrets.EC2_HOST }}
           EC2_USER: ${{ secrets.EC2_USER }}
         run: |
-          ssh -o StrictHostKeyChecking=no $EC2_USER@$EC2_HOST << 'EOF'
+          ssh -o StrictHostKeyChecking=no $EC2_USER@$EC2_HOST << EOF
           set -e
 
           APP_DIR="/home/ubuntu/app"
-          echo "Deploying FastAPI app to $APP_DIR ..."
+          echo "Deploying FastAPI app to \$APP_DIR ..."
 
-          mkdir -p "$APP_DIR"
-          cd "$APP_DIR"
+          mkdir -p "\$APP_DIR"
+          cd "\$APP_DIR"
 
           # Clone or update repo
           if [ ! -d ".git" ]; then
@@ -41,11 +41,11 @@ jobs:
               git reset --hard origin/master
           fi
 
-          # Setup Python environment
+          # Install Python and pip
           sudo apt-get update -y
-          sudo apt-get install -y python3 python3-venv python3-pip
-          
-          # Create virtual environment if not exists
+          sudo apt-get install -y python3 python3-venv python3-pip git
+
+          # Create virtual environment if missing
           if [ ! -d "venv" ]; then
               python3 -m venv venv
           fi
@@ -60,10 +60,11 @@ jobs:
               exit 1
           fi
 
-          # Stop any running uvicorn app
-          pkill -f "uvicorn" || true
+          # Stop any running uvicorn process
+          pkill -f "uvicorn backend.app.main:app" || true
 
-          # Start the FastAPI app in background
+          # Start FastAPI app in background
           echo "Starting FastAPI app..."
-          nohup python3 -m uvicorn backend.app.main:app --host 0.0.0.0 --port 8000 > app.log 2>&1 &
+          nohup venv/bin/python -m uvicorn backend.app.main:app \
+              --host 0.0.0.0 --port 8000 > app.log 2>&1 &
           EOF
