--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,27 +23,26 @@ jobs:
           EC2_HOST: ${{ secrets.EC2_HOST }}
           EC2_USER: ${{ secrets.EC2_USER }}
         run: |
-          ssh -o StrictHostKeyChecking=no $EC2_USER@$EC2_HOST << EOF
+          ssh -o StrictHostKeyChecking=no $EC2_USER@$EC2_HOST << 'EOF'
           set -e
 
           APP_DIR="/home/ubuntu/app"
-          echo "Deploying FastAPI app to \$APP_DIR ..."
+          echo "Deploying FastAPI app to $APP_DIR ..."
 
-          mkdir -p "\$APP_DIR"
-          cd "\$APP_DIR"
+          mkdir -p "$APP_DIR"
+          cd "$APP_DIR"
+
+          # Stop the FastAPI service if it exists
+          sudo systemctl stop fastapi.service || true
 
           # Clone or update repo
           if [ ! -d ".git" ]; then
-              git clone git@github.com:RusosVascosYValencianos/AplicacionWeb.git .
+              git clone git@github.com:OxigenGo/AplicacionWeb.git .
           else
-              git remote set-url origin git@github.com:RusosVascosYValencianos/AplicacionWeb.git
+              git remote set-url origin git@github.com:OxigenGo/AplicacionWeb.git
               git fetch origin master
               git reset --hard origin/master
           fi
-
-          # Install Python and pip
-          sudo apt-get update -y
-          sudo apt-get install -y python3 python3-venv python3-pip git
 
           # Create virtual environment if missing
           if [ ! -d "venv" ]; then
@@ -60,11 +59,10 @@ jobs:
               exit 1
           fi
 
-          # Stop any running uvicorn process
-          pkill -f "uvicorn backend.app.main:app" || true
+          # Reload systemd and start FastAPI service
+          sudo systemctl daemon-reload
+          sudo systemctl enable fastapi.service
+          sudo systemctl start fastapi.service
 
-          # Start FastAPI app in background
-          echo "Starting FastAPI app..."
-          nohup venv/bin/python -m uvicorn backend.app.main:app \
-              --host 0.0.0.0 --port 8000 > app.log 2>&1 &
+          echo "Deployment complete."
           EOF
