--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -61,8 +61,8 @@ jobs:
 
           # Reload systemd and start FastAPI service
           sudo systemctl daemon-reload
-          sudo systemctl enable fastapi.service
-          sudo systemctl start fastapi.service
+          sudo systemctl enable fastapi-app.service
+          sudo systemctl start fastapi-app.service
 
           echo "Deployment complete."
           EOF
